# CodingTask

./: .clang-format  .clang-tidy  .gitignore  .pylintrc  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py  requirements.txt
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: Application.hpp  ClockWidget.cpp  ClockWidget.hpp  FadingStackedWidget.cpp  FadingStackedWidget.hpp  ProgressBarWidget.cpp  ProgressBarWidget.hpp  Window.cpp  Window.hpp  lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: CodeTask_test.cpp
